modify workflow.yml file

--- a/.github/workflows/download_alcohol.yml
+++ b/.github/workflows/download_alcohol.yml
@@ -2,6 +2,15 @@ name: download alcohol
 
 on:
   workflow_dispatch:
+    inputs:
+      alco:
+        description: 'choose alcohol or lint code'
+        default: 'lint'
+        required: true
+        type: choice
+        options:
+          - find
+          - lint
   schedule:
     - cron: "* * * * 1"
   push:
@@ -12,6 +21,7 @@ jobs:
   scrap_alcohol:
     runs-on:
       ubuntu/latest
+    if: ${{ inputs.alco == 'find' }}
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v4
@@ -19,7 +29,9 @@ jobs:
           python-version: |
             "3.x"
       - name: install dependencies
-        run: pip install -r requirements.txt
+        run: |
+              python -m pip install --upgrade pip
+              pip install -r requirements.txt
       - name: install google-chrome
         run: sudo upt-get install google-chrome-stable
 
@@ -33,13 +45,16 @@ jobs:
           message: 'add new alcohol'
   lint_code:
     runs-on: ubuntu/latest
+    if: ${{ inputs.alco == 'lint' }}
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v4
         with:
           python-version: "3.x"
       - name: install dependencies
-        run: pip install -r requirements.txt
+        run: |
+              python -m pip install --upgrade pip
+              pip install -r requirements.txt
       - name: lint with Ruff
         run: |
           pip install ruff
