--- a/.github/workflows/download_alcohol.yml
+++ b/.github/workflows/download_alcohol.yml
@@ -32,7 +32,7 @@ jobs:
               python -m pip install --upgrade pip
               pip install -r requirements.txt
       - name: install google-chrome
-        run: sudo upt-get install google-chrome-stable
+        run: sudo apt-get install google-chrome-stable
 
       - name: start scrapping
         run: python run.py
