--- a/.github/workflows/download_alcohol.yml
+++ b/.github/workflows/download_alcohol.yml
@@ -26,7 +26,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v4
         with:
-          python-version: "3.x"
+          python-version: "3.11"
       - name: install dependencies
         run: |
               python -m pip install --upgrade pip
@@ -35,7 +35,7 @@ jobs:
         run: sudo apt-get install google-chrome-stable
 
       - name: start scrapping
-        run: python run.py
+        run: python run.py --browser undetected
       - name: commit changes
         uses: EndBug/add-and-commit@v9
         with:
