--- a/.env.dev
+++ b/.env.dev
@@ -1,6 +1,6 @@
-DEBUG=1
+DEBUG=0
 SECRET_KEY=django-insecure-6lt8siykqo@=$dq6yd@25ae1k1yk%5uksk!9@(wpf81cm!vr7$
-DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 [::1]
+DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 [::1] web-production-da7a.up.railway.app
 DATABASE_ENGINE=django.db.backends.postgresql_psycopg2
 SQL_DATABASE=alcohols
 SQL_USER=postgres
