modified settings.py and env files

--- a/.env.dev
+++ b/.env.dev
@@ -1,6 +1,6 @@
 DEBUG=1
 SECRET_KEY=django-insecure-6lt8siykqo@=$dq6yd@25ae1k1yk%5uksk!9@(wpf81cm!vr7$
-DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 [::1] web-production-da7a.up.railway.app
+DJANGO_ALLOWED_HOSTS='localhost 127.0.0.1 [::1] web-production-da7a.up.railway.app'
 DATABASE_ENGINE=django.db.backends.postgresql_psycopg2
 SQL_DATABASE=alcohols
 SQL_USER=postgres
@@ -8,3 +8,4 @@ SQL_PASSWORD=postgres
 SQL_HOST=db
 SQL_PORT=5432
 DATABASE=postgres
+DATABASE_URL=postgresql://postgres:aFTjFeYskeVtoaEUwjVIsLPTiEgfCUUd@roundhouse.proxy.rlwy.net:23154/railway
