--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-chromedriver-py>=123.0.6312.122
-Django>=5.0.4, <6.0.
-django-on-heroku==1.1.2
+chromedriver-py==123.0.6312.122
+dj-database-url==2.1.0
+Django==5.0.4
 fake-useragent==1.5.1
 gunicorn==22.0.0
 psycopg2-binary==2.9.9
@@ -10,3 +10,4 @@ selenium==4.15.2
 undetected-chromedriver==3.5.4
 webdriver-manager==4.0.1
 wget==3.2
+whitenoise==6.6.0
