--- a/.github/workflows/download_alcohol.yml
+++ b/.github/workflows/download_alcohol.yml
@@ -12,7 +12,7 @@ on:
           - find
           - lint
   schedule:
-    - cron: "* * * * 1"
+    - cron: "45 1 * * 6"
 #  push:
 #    branches:
 #      - "main"
@@ -21,7 +21,7 @@ jobs:
   scrap_alcohol:
     runs-on:
       ubuntu-latest
-    if: ${{ inputs.alco == 'find' }}
+    if: inputs.alco == 'find' || github.event.schedule
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v4
@@ -43,6 +43,7 @@ jobs:
           add: 'data'
           author_name: oleh lykhorovych
           message: 'add new alcohol'
+
   lint_code:
     runs-on: ubuntu-latest
     if: ${{ inputs.alco == 'lint' }}
