--- a/.github/workflows/find_alcohol_schedule.yml
+++ b/.github/workflows/find_alcohol_schedule.yml
@@ -1,7 +1,7 @@
   name: job scheduler
   on:
     schedule:
-      - cron: "10 15 * * 6"
+      - cron: '0 16 * * 6'
   jobs:
     find_alcohol:
       runs-on:
