--- a/.github/workflows/find_alcohol_schedule.yml
+++ b/.github/workflows/find_alcohol_schedule.yml
@@ -1,9 +1,9 @@
-name: job scheduler
+name: "job scheduler"
 on:
    schedule:
-     - cron: '0 18 * * 6'
+     - cron: '0 19 * * 6'
 jobs:
-  find_alcohol:
+  search_alcohol:
     runs-on:
       ubuntu-latest
     steps:
