--- a/.github/workflows/find_alcohol_schedule.yml
+++ b/.github/workflows/find_alcohol_schedule.yml
@@ -1,7 +1,7 @@
-name: job scheduler
+name: Find alcohol
 on:
    schedule:
-     - cron: '0 18 * * 6'
+     - cron: '0 18 * * 6'  # if github.event.schedule != '0 18 * * 6'
 jobs:
   find_alcohol:
     runs-on:
