--- a/.github/workflows/download_alcohol.yml
+++ b/.github/workflows/download_alcohol.yml
@@ -11,8 +11,8 @@ on:
         options:
           - find
           - lint
-  schedule:
-    - cron: '0 16 * * 0'
+#  schedule:
+#    - cron: '0 23 * * 0'
 #  push:
 #    branches:
 #      - "main"
@@ -21,7 +21,7 @@ jobs:
   scrap_alcohol:
     runs-on:
       ubuntu-latest
-    if: inputs.alco == 'find' || github.event.schedule == '0 16 * * 0'
+    if: inputs.alco == 'find' #|| github.event.schedule == '0 16 * * 0'
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v4
