--- a/.github/workflows/find_alcohol_schedule.yml
+++ b/.github/workflows/find_alcohol_schedule.yml
@@ -1,7 +1,7 @@
 name: Find alcohol
 on:
    schedule:
-     - cron: '30 14 * * 4'  # if github.event.schedule != '0 18 * * 6'
+     - cron: '0 12 * * 6'  # if github.event.schedule != '0 18 * * 6'
 jobs:
   search_alcohol:
     runs-on:
@@ -19,7 +19,7 @@ jobs:
         run: sudo apt-get install google-chrome-stable
       - name: start scrapping
         run: |
-             python run.py --browser undetected
+             python run.py --browser undetected --headless true
       - name: commit changes
         uses: EndBug/add-and-commit@v9
         with:
