change requirements.txt file

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,15 @@
-chromedriver-py==123.0.6312.122
+chromedriver-py==125.0.6422.141
 dj-database-url==2.1.0
 Django==5.0.4
+django-extensions==3.2.3
+django-widget-tweaks==1.5.0
 fake-useragent==1.5.1
 gunicorn==22.0.0
 psycopg2-binary==2.9.9
 python-dotenv==1.0.1
 requests==2.31.0
 selenium==4.15.2
-undetected-chromedriver==3.5.4
+undetected-chromedriver==3.5.5
 webdriver-manager==4.0.1
 wget==3.2
 whitenoise==6.6.0
-django-widget-tweaks>=1.5.0
