--- a/.gitignore
+++ b/.gitignore
@@ -59,8 +59,6 @@ Dockerfile
 # Django stuff:
 *.log
 local_settings.py
-data
-*data/db.sqlite3
 db.sqlite3-journal
 
 # Flask stuff:
@@ -164,3 +162,15 @@ browser_for_local_testing
 .idea
 .dockerignore
 wget-log
+checklist.txt
+.python-version
+.pre-commit-config.yaml
+.vscode
+data.session.sql
+data/undetected_chromedriver
+data/dconf/
+main.lua
+result.json
+some.py
+type.txt
+django-modules.txt
