--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,21 @@
-chromedriver-py
-dj-database-url==2.1.0
-Django==5.0.4
-django-extensions==3.2.3
-django-widget-tweaks==1.5.0
-fake-useragent==1.5.1
-gunicorn==22.0.0
-psycopg2-binary==2.9.9
-python-dotenv==1.0.1
-requests==2.31.0
-selenium==4.15.2
-undetected-chromedriver==3.5.5
-webdriver-manager==4.0.1
-wget==3.2
-whitenoise==6.6.0
+chromedriver-py==121.0.6167.85
+dj-database-url>=2.1.0
+Django>=5.0.4
+django-extensions>=3.2.3
+django-widget-tweaks>=1.5.0
+fake-useragent>=1.5.1
+gunicorn>=22.0.0
+psycopg2-binary>=2.9.9
+python-dotenv>=1.0.1
+requests>=2.31.0
+selenium>=4.15.2
+undetected-chromedriver>=3.5.5
+webdriver-manager>=4.0.1
+wget>=3.2
+whitenoise>=6.6.0
 plotly
 kaleido
 django-cacheops
 django-redis
 redis
+retrying
