add close banner function

--- a/.env.scrapping
+++ b/.env.scrapping
@@ -1,4 +1,4 @@
 REMOTE_WEBBROWSER=http://remote_webbrowser:3000
-DRIVER_ENV=remote
+DRIVER_ENV=ucd
 CHROME_BIN_PATH=/usr/src/app/chrome/linux-121.0.6167.85/chrome-linux64/chrome
 XDG_CACHE_HOME=/code/data
